--- a/index.html
+++ b/index.html
@@ -13,16 +13,121 @@
 </head>
 
 <body>
-   <header>
+    <header>
+        <div>
+            <div class="row header">
+                <div class="col-3 logo">
+                    <H3 class="store">ИНТЕРНЕТ-МАГАЗИН ПОСУДЫ</H3>
+                    <H1 class="site">POSUDANEW.RU</H1>
+                    <h4 class="tagline">ПОСУДА ПО НИЗКИМ ЦЕНАМ</h4>
+                </div>
+                <div class="col-3 search">
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+                <div class="col-3 phone row">
+<div class="col-4"></div>
+<div class="col-8">
+    ПОЗВОНИТЕ НАМ<br/>
+    <b>+7(4872) 79-29-10</b></div>
+                </div>
+                <div class="col-3 cart">
+                    <div class="cart row">
+                        <div class="col-3">КОРЗИНА</div>
+                        <div class="col-9">КОРЗИНА <br/><b>Товаров нет</b><br/><a href="#">Регистрация</a> / <a href="#">Вход</a></div>
 
-   </header>
-   <section class="content">
-       
-   </section>
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-   <footer>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
 
-   </footer>
+    </header>
+    <section class="content">
+<div class="contaner">
+    <div class="row">
+        <div class="col-4">
+<ul class="category">
+    <li>Эмалированная посуда</li>
+    <li>Антипригарная посуда</li>
+    <li>Нержавеющая посуда</li>
+    <li>Алюминиевая посуда</li>
+    <li>Стеклянная посуда</li>
+    <li>Фарворовая посуда</li>
+    <li>Керамическая посуда</li>
+    <li>Пластиковая посуда</li>
+</ul>
+        </div>
+        <div class="col-8 content-right">
+<div class="slider"></div>
+<div class="cards">
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+</div>
+        </div>
+    </div>
+</div>
+    </section>
+
+    <footer>
+
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
