--- a/index.html
+++ b/index.html
@@ -13,121 +13,221 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <div class="row header">
-                <div class="col-3 logo">
-                    <H3 class="store">ИНТЕРНЕТ-МАГАЗИН ПОСУДЫ</H3>
-                    <H1 class="site">POSUDANEW.RU</H1>
-                    <h4 class="tagline">ПОСУДА ПО НИЗКИМ ЦЕНАМ</h4>
-                </div>
-                <div class="col-3 search">
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
-                <div class="col-3 phone row">
-<div class="col-4"></div>
-<div class="col-8">
-    ПОЗВОНИТЕ НАМ<br/>
-    <b>+7(4872) 79-29-10</b></div>
-                </div>
-                <div class="col-3 cart">
-                    <div class="cart row">
-                        <div class="col-3">КОРЗИНА</div>
-                        <div class="col-9">КОРЗИНА <br/><b>Товаров нет</b><br/><a href="#">Регистрация</a> / <a href="#">Вход</a></div>
+    <div class="wrapper">
+        <header>
+            <div>
+                <div class="row header">
+                    <div class="col-3 logo">
+                        <H3 class="store">ИНТЕРНЕТ-МАГАЗИН ПОСУДЫ</H3>
+                        <H1 class="site">POSUDANEW.RU</H1>
+                        <h4 class="tagline">ПОСУДА ПО НИЗКИМ ЦЕНАМ</h4>
+                    </div>
+                    <div class="col-3 search">
+                        <form class="form-inline my-2 my-lg-0">
+                            <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text p-0"><button class="btn"
+                                            type="submit"><img src="img/search.png" class="img-search" alt=""></button></div>
+                                </div>
+                                <input class="form-control mr-sm-2 search" type="search" placeholder="Search"
+                                    aria-label="Search">
+                            </div>
 
+
+                        </form>
+                    </div>
+                    <div class="col-3 phone row text-center">
+                        <div class="col-2"><img src="img/1.png" alt=""></div>
+                        <div class="col-10 phone">
+                            ПОЗВОНИТЕ НАМ<br />
+                            <b>+7(4872) 79-29-10</b></div>
+                    </div>
+                    <div class="col-3 cart">
+                        <div class="cart row">
+                            <div class="col-3 text-center"><img src="img/cart.png" alt=""></div>
+                            <div class="col-9">КОРЗИНА <br /><b>Товаров нет</b><br /><a href="#">Регистрация</a> / <a
+                                    href="#">Вход</a></div>
+
+                        </div>
+                    </div>
+                </div>
+                <nav class="navbar navbar-expand-lg">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">ГЛАВНАЯ <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">КАТАЛОГ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">НОВИНКИ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">АКЦИИ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">КАК СДЕЛАТЬ ЗАКАЗ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ДОСТАВКА И ОПЛАТА</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">КОНТАКТЫ</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+
+        </header>
+        <section class="content">
+            <div class="contaner">
+                <div class="row">
+                    <div class="col-3">
+                        <ul class="category">
+                            <li>Эмалированная посуда</li>
+                            <li>Антипригарная посуда</li>
+                            <li>Нержавеющая посуда</li>
+                            <li>Алюминиевая посуда</li>
+                            <li>Стеклянная посуда</li>
+                            <li>Фарворовая посуда</li>
+                            <li>Керамическая посуда</li>
+                            <li>Пластиковая посуда</li>
+                        </ul>
+                    </div>
+                    <div class="col-9 content-right">
+                        <div class="slider"><img src="img/2.png" alt=""></div>
+                        <div class="cards">
+                            <div class="card shadow-sm p-3 mb-1">
+                                <img src="img/3.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Чайники</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-1">
+                                <img src="img/4.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Кастрюли</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm  p-3 mb-1">
+                                <img src="img/5.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Наборы кастрюль</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-1">
+                                <img src="img/6.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Жаропрочная посуда</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm">
+                                <img src="img/7.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Сковороды</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm">
+                                <img src="img/8.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Слоловые приборы</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm">
+                                <img src="img/9.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Тарелки и салатницы</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm">
+                                <img src="img/10.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Чайные столовые прибры</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/11.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Куханная утварь</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/12.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Стаканы и фужеры</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/13.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Миски, лотки и контейнеры</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/14.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Термосы</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/15.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Вазы</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/16.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Детская посуда</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/17.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Посуда и серебро</a>
+                                </div>
+                            </div>
+                            <div class="card shadow-sm p-3 mb-5">
+                                <img src="img/18.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-custom rounded-0">Хозтовары</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <h1>Интернет-магазин посуды www.posudanew.ru</h1>
+                            <p>Посуда – это неотъемлемая часть любой кухни. Именно она ежедневно используется всеми
+                                домочадцами, она долгое время способна сохранять свои изначальные качества и иногда
+                                некоторые изделия передаются из поколения в поколение. На нашем сайте представлена
+                                хорошая посуда, с отличными качественными характеристиками и порой уникальными
+                                свойствами. При этом каждое изделие имеет свои особенности, которые заслуживают
+                                пристального внимания.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        </section>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
+        <footer>
+            <div class="row">
+                <div class="col-4">Posudanew.ru - интернет-магазин посуды в Туле! (с) 2016 Все права защищены</div>
+                <div class="col-4 row">
+                    <div class="col-3"><img src="img/1.png" alt=""></div>
+                    <div class="col-9"><b>+7 (4872) 79-29-10</b></div>
                 </div>
-            </nav>
-        </div>
+                <div class="col-4">Создание и продвижение сайтов - <img src="img/homesite.png" alt=""></div>
+            </div>
 
-    </header>
-    <section class="content">
-<div class="contaner">
-    <div class="row">
-        <div class="col-4">
-<ul class="category">
-    <li>Эмалированная посуда</li>
-    <li>Антипригарная посуда</li>
-    <li>Нержавеющая посуда</li>
-    <li>Алюминиевая посуда</li>
-    <li>Стеклянная посуда</li>
-    <li>Фарворовая посуда</li>
-    <li>Керамическая посуда</li>
-    <li>Пластиковая посуда</li>
-</ul>
-        </div>
-        <div class="col-8 content-right">
-<div class="slider"></div>
-<div class="cards">
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-</div>
-        </div>
+        </footer>
     </div>
-</div>
-    </section>
-
-    <footer>
-
-    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
